# MOM6

./: .gitmodules  CMakeLists.txt  README.JEDI.md  tags
cmake/: compiler_flags_Intel_Fortran.cmake  mom6_compiler_flags.cmake
config_src/: CMakeLists.txt
config_src/drivers/FMS_cap/: ocean_model_MOM.F90
config_src/drivers/nuopc_cap/: mom_cap.F90  mom_cap_methods.F90  mom_ocean_model_nuopc.F90
config_src/mct_driver/: mom_surface_forcing_mct.F90
src/: CMakeLists.txt
src/core/: MOM.F90  MOM_continuity_PPM.F90
src/framework/: MOM_get_input.F90  MOM_horizontal_regridding.F90  posix.h  posix.h.in
src/parameterizations/lateral/: MOM_thickness_diffuse.F90
src/parameterizations/vertical/: MOM_kappa_shear.F90
